--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /appdae_02/build/
 /appdae_02_v2/nbproject/private/
 /appdae_02_v2/build/
+/appdae_02 - copia/build/
+/appdae_02 - copia/nbproject/private/
+/appdae_03/nbproject/private/
+/appdae_03/build/
