agregando proyecto appdae_06 y actualizando .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@
 /Fernandez/build/
 /appdae_05/nbproject/private/
 /appdae_05/build/
+/appdae_06/nbproject/private/
+/appdae_06/build/
+nbproject/private/
