--- a/appdae_06/nbproject/project.properties
+++ b/appdae_06/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Fernandez
-application.vendor=LC302
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -29,11 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Fernandez.jar
+dist.jar=${dist.dir}/appdae_06.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Fernandez
-endorsed.classpath=
+dist.jlink.output=${dist.jlink.dir}/appdae_06
 excludes=
 includes=**
 jar.compress=false
@@ -46,8 +44,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=23
-javac.target=23
+javac.source=22
+javac.target=22
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -72,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Fernandez
-main.class=capa_presentacion.Fernandez
+jlink.launcher.name=appdae_06
+main.class=capa_presentacion.Appdae_01
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
